Initial jcmd support.